--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creative-agency-server",
+  "name": "creative-agency-end",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
